added SimpleMonotonicTimestampAdjust to the demo configs and fixed the Yaml for it.

--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -820,6 +820,7 @@ Parser:
 Input:
         timestamp_paths: ["/model/DailyCron/DTM"]
         verbose: True # use this to debug your parser-model
+        adjust_timestamps: True
 
 Analysis:
         - type: TimestampsUnsortedDetector
