added SimpleMonotonicTimestampAdjust to the demo configs.

--- a/aecid-testsuite/demo/aminer/demo-config.yml
+++ b/aecid-testsuite/demo/aminer/demo-config.yml
@@ -573,7 +573,7 @@ Parser:
        - id: fixedDataModelElementDrawnNumber
          type: FixedDataModelElement
          name: 'FixedDataModelElement'
-         args: 'drawn number: '
+         args: '[drawn number]: '
 
        - id: decimalIntegerValueModelElement1
          type: DecimalIntegerValueModelElement
