--- a/aecid-testsuite/demo/aminerJsonInputDemo/windows.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/windows.yml
@@ -148,7 +148,7 @@ Parser:
            UserName: username
            Site: site
            Container: container
-           _empty_list: EMPTY_LIST
+           _empty_list: EMPTY_ARRAY
            _empty_object: EMPTY_OBJECT
 
 
