Added python3-statsmodels to Dockerfiles
This commit adds python3-statsmodels to the Dockerfiles(production,
testing) and makes sure that links for statsmodels are also available in
docker-images.

--- a/aecid-testsuite/Dockerfile
+++ b/aecid-testsuite/Dockerfile
@@ -44,6 +44,7 @@ RUN apt-get update && apt-get install -y \
     python3-yaml \
     python3-pylibacl \
     python3-urllib3 \
+    python3-statsmodels \
     libacl1-dev \
     postfix \
     procps \
@@ -102,6 +103,7 @@ RUN ln -s /usr/lib/logdata-anomaly-miner/aminerremotecontrol.py /usr/bin/aminerr
 	&& ln -s /usr/lib/python3/dist-packages/dateutil /etc/aminer/conf-enabled/dateutil \
 	&& ln -s /usr/lib/python3/dist-packages/six.py /etc/aminer/conf-enabled/six.py \
 	&& ln -s /usr/lib/python3/dist-packages/urllib3 /etc/aminer/conf-enabled/urllib3 \
+	&& ln -s /usr/lib/python3/dist-packages/statsmodels /usr/lib/logdata-anomaly-miner/statsmodels \
 	&& useradd -ms /usr/sbin/nologin aminer && mkdir -p /var/lib/aminer/log && chmod 0755 /aminerwrapper.sh \
         && chown aminer.aminer -R /var/lib/aminer
 
