--- a/aecid-testsuite/unit/data/configfiles/suppress_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/suppress_config.yml
@@ -3,8 +3,6 @@ AminerGroup: 'aminer' # optional default: aminer
 
 LearnMode: False
 
-SuppressNewMatchPathDetector: False
-
 LogResourceList:
         - 'file:///var/log/apache2/access.log'
 
@@ -26,10 +24,8 @@ Parser:
             - apacheModel
 
 Input:
-        verbose: True # optional
         multi_source: False # optional
         timestamp_paths: "/model/accesslog/time"
-        suppress_unparsed: True
 
 Analysis:
         - type: NewMatchPathValueComboDetector
@@ -38,6 +34,12 @@ Analysis:
           persistence_id: 'accesslog_request' # optional default: Default
           output_logline: False # optional default: True
           allow_missing_values: False # optional default: False
+          suppress: False
+        - type: VerboseUnparsedAtomHandler
+          id: VerboseUnparsedAtomHandler
+          suppress: True
+        - type: NewMatchPathDetector
+          id: DefaultNewMatchPathDetector
           suppress: False
 
 EventHandlers:
