changed multiple tests.

--- a/aecid-testsuite/demo/aminerJsonInputDemo/json-elastic-demo.yml
+++ b/aecid-testsuite/demo/aminerJsonInputDemo/json-elastic-demo.yml
@@ -203,3 +203,6 @@ EventHandlers:
         - id: stpe
           type: StreamPrinterEventHandler
 
+Core.PersistencePeriod: 1
+Core.PersistencePeriod: 1
+Core.PersistencePeriod: 1
