--- a/aecid-testsuite/Dockerfile
+++ b/aecid-testsuite/Dockerfile
@@ -77,7 +77,6 @@ RUN pip3 install coverage
 
 # Copy logdata-anomaly-miner-sources
 ADD source/root/usr/lib/logdata-anomaly-miner /usr/lib/logdata-anomaly-miner
-ADD source /home/aminer/source
 
 # copy these files instead as symlinks would need absolute paths.
 ADD source/root/etc/aminer/conf-available/ait-lds/* /etc/aminer/conf-enabled/
@@ -124,6 +123,8 @@ RUN chown aminer.aminer -R /home/aminer \
     && echo "aminer ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/aminer
 
 ADD scripts/testingwrapper.sh /testingwrapper.sh
+ADD source /home/aminer/source
+ADD docs /home/aminer/docs
 
 USER aminer
 WORKDIR /home/aminer/aecid-testsuite
