Change output logline param default value to false

--- a/aecid-testsuite/unit/data/configfiles/unknown_event_handler.yml
+++ b/aecid-testsuite/unit/data/configfiles/unknown_event_handler.yml
@@ -43,14 +43,14 @@ Analysis:
         - type: NewMatchPathValueDetector
           paths: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
-          output_logline: False # optional default: True
+          output_logline: False
           learn_mode: True
 
         - type: NewMatchPathValueComboDetector
           paths: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
-          output_logline: False # optional default: True
+          output_logline: False
           allow_missing_values: False # optional default: False
 
         - type: NewMatchPathValueComboDetector
