--- a/aecid-testsuite/unit/data/configfiles/same_id_event_handlers.yml
+++ b/aecid-testsuite/unit/data/configfiles/same_id_event_handlers.yml
@@ -24,7 +24,7 @@ Analysis:
           paths: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
-          output_logline: False # optional default: True
+          output_logline: False
           allow_missing_values: False # optional default: False
 
         - type: NewMatchPathValueComboDetector
