--- a/aecid-testsuite/unit/data/configfiles/suppress_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/suppress_config.yml
@@ -32,7 +32,7 @@ Analysis:
           id: ValueComboDetector
           paths: ["first/seq/s1","first/seq/d1"]
           persistence_id: 'accesslog_request' # optional default: Default
-          output_logline: False # optional default: True
+          output_logline: False
           allow_missing_values: False # optional default: False
           suppress: False
         - type: VerboseUnparsedAtomHandler
