--- a/aecid-testsuite/unit/data/configfiles/template_config.yml
+++ b/aecid-testsuite/unit/data/configfiles/template_config.yml
@@ -29,7 +29,7 @@ Analysis:
           id: NewMatchPathValueDetector
           paths: ["/model/accesslog/status"]
           persistence_id: 'accesslog_status' # optional default: Default
-          output_logline: False # optional default: True
+          output_logline: False
           learn_mode: True
 
         - type: NewMatchPathValueComboDetector
@@ -37,7 +37,7 @@ Analysis:
           paths: ["/model/accesslog/request","/model/accesslog/method"]
           learn_mode: True
           persistence_id: 'accesslog_request' # optional default: Default
-          output_logline: False # optional default: True
+          output_logline: False
           allow_missing_values: False # optional default: False
 
         - type: NewMatchPathValueComboDetector
