Added include-directive to supervisord.conf
The include block allows to add config-files to the directory
/etc/supervisor/conf.d/*.conf.

--- a/scripts/supervisord.conf
+++ b/scripts/supervisord.conf
@@ -5,5 +5,8 @@ pidfile=/var/lib/supervisor/supervisor.pid
 [unix_http_server]
 file=/var/lib/supervisor/supervisor.sock 
 
+[include]
+files = /etc/supervisor/conf.d/*.conf
+
 [program:aminer]
 command=/usr/lib/logdata-anomaly-miner/aminer.py
